# Qt_Qml_Sandbox

Calculator/: CMakeLists.txt
Calculator/components/: MyButton.qml
Calculator/interface/: main.qml
Calculator/src/: main.cpp
QmlWithCpp/Context/: CMakeLists.txt
QmlWithCpp/Context/src/: main.cpp
QmlWithCpp/Context/ui/: main.qml
